--- a/blah.html
+++ b/blah.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="blah.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <script src="blah.js"></script>
 
 </head>
 <body>
@@ -49,7 +51,6 @@
     <option value="brazil">brazil</option>
 </select>
 </div>
-
         <table id="myTable">
             <tbody id="tableBody">
             </tbody>
@@ -58,7 +59,6 @@
         </div></div>       
     <div style=" text-align: left;"><br><br>
     </div>
-    <script src="blah.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
 </body>
